app/assets/stylesheets/sections/page.scss
// ---------------------------
// PAGE PAGES
// ---------------------------


// Page navigation

.page-nav {
  font-size: 0;
  color: $bodyFgFaded;
  display: inline-block;
  vertical-align: middle;
  &_prev, &_next, &_info {
    padding: 0 0.6em;
    line-height: 2.2;
    display: table-cell;
    border-radius: 1.2em;
    text-decoration: none;
    font-size: $fontSizeSmall;
    background: mix(#FFF, $bodyBg, 25);
    background-clip: padding-box;
    border: 1px solid $borderColor;
  }
  &_prev, &_next { color: rgba($bodyFgFaded, 0.5); }
  &_info {
    border-radius: 0;
    border-width: 1px 0;
  }
  &_prev {
    padding-left: 0.8em;
    border-top-right-radius: 0;
    border-bottom-right-radius: 0;
  }
  &_next {
    padding-right: 0.8em;
    border-top-left-radius: 0;
    border-bottom-left-radius: 0;
  }
  a {
    color: inherit;
    &:hover {
      color: $bodyFg;
      background-color: mix(#FFF, $bodyBg, 80);
    }
    &:active { @include button-state(active); }
  }
}


// Page editor full screen mode

.page-editor {
  margin: 0 0 $gapSize 0;
  &.fullscreen {
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    z-index: 9999;
    position: fixed;
    background: $bodyBg;
    box-sizing: border-box;
    padding: $gapSize * 1.5 $gapSize * 1.5 0 $gapSize * 1.5;

    .auto-fullscreen { display: inline-block; }
  }

  .auto-fullscreen { display: none; }
}


// Page toolbar

.page-toolbar {
  padding-bottom: $gapSize;
  margin-top: -$gapSize / 2;
  label { margin-right: 6px; }

  @media screen and (max-width: $widthL) {
    .hide-l { display: none; }
  }
  @media screen and (max-width: $widthM) {
    .hide-m { display: none; }
  }
}


// Page columns

.page-headlines {
  width: 100%;
  display: inline-block;
  .headline {
    width: 50%;
    float: left;
    margin-bottom: $gapSize / 2;
  }
}

.page-columns {
  width: 100%;
  min-height: 700px;
  position: relative;
  box-sizing: border-box;
  border: 1px solid rgba($borderColor, 0.6);
  &[data-layout-mode='rtl'] .page-column {
    left: 0;
    border-width: 0;
    &:first-child {
      left: 50%;
      border-width: 0 0 0 1px;
    }
  }
  &[data-layout-mode='ttb'] .page-column {
    left: 0;
    width: 100%;
    height: 50%;
    border-width: 0;
    &:last-child {
      top: 50%;
      border-width: 1px 0 0 0;
    }
  }
  &[data-layout-mode='btt'] .page-column {
    left: 0;
    width: 100%;
    height: 50%;
    border-width: 0;
    &:first-child {
      top: 50%;
      border-width: 1px 0 0 0;
    }
  }
}

.page-column {
  top: 0;
  width: 50%;
  height: 100%;
  position: absolute;
  box-sizing: border-box;
  border: 1px solid rgba($borderColor, 0.6);
  background: #FFF;
  &:first-child {
    left: 0;
    border-width: 0;
  }
  &:last-child {
    left: 50%;
    border-width: 0 0 0 1px;
  }
  &_voice {
    top: 10px;
    left: 10px;
    position: absolute;
  }
  &_actions {
    top: 14px;
    right: 6px;
    position: absolute;
    button, .button {
      border-color: mix(#fff, $bodyFgLight, 50);
      box-shadow: none;
      color: $bodyFg;
      font-size: $fontSizeSmall;
      background: mix( white, $bodyFgLight, 95);
      &:hover, &:active {
        color: $bodyFg;
        background: mix( white, $bodyFgLight, 85);
      }
    }
  }
}

.voice-error {
  font-weight: bold;
  color: red;
}

.voice-info {
  font-weight: bold;
}

.voice {
  margin-right: 10px;
}

.page-preview {
  height: 100%;
  overflow-y: auto;
  padding: $gapSize;
  box-sizing: border-box;
  font-size: $fontSizeBig;
  background: rgba(#FFF, 0.3);
  p:first-child { margin-top: 25px; }
  p:last-child { margin-bottom: 0; }
  .centered_content { text-align: center; }
  .field__label {
    color: #906e58;
  }
}

.page-editarea {
  height: 100%;
  background: #FFF;
  box-sizing: border-box;
  input, textarea {
    border: 0;
    background: none;
    box-shadow: none;
  }
  textarea, div.editarea {
    height: calc(100% - 50px);
    margin-top: 45px;
    resize: none;
    padding: $gapSize / 2;
  }
  &_title {
    height: 50px;
    display: table;
    margin: 5px 5px 0 5px;
    box-sizing: border-box;
    font-size: $fontSizeBig;
    border-bottom: 1px solid rgba(#000, 0.1);
    > * {
      padding: 5px;
      display: table-cell;
      white-space: nowrap;
      vertical-align: middle;
      &:last-child { width: 100%; }
    }
    + textarea { height: calc(100% - 55px); }
  }
}

.fieldarea, .fieldarea > .page-editarea {
  background-color: $bodyBg;
  border: 0;
}

div.editarea {
  box-sizing: border-box;
  overflow: auto;
  span {
    box-sizing: border-box;
    display: inline-block;
    margin-bottom: 10px;
    margin-right: auto;
  }
  input, textarea, select {
    border: 1px solid $inputBorderColor;
    background-color: $inputBackground;
    box-shadow: inset 0 1px rgba(#000, 0.03);
    box-sizing: border-box;
    min-width: 2em;
  }
  textarea {
    margin-top: 0;
    resize: vertical;
    overflow: auto;
  }
  label {
    box-sizing: border-box;
    text-align: left;
    vertical-align: middle;
    margin-left: 5px;
    overflow: hidden;
  }
  .field-instructions{
    padding: 2rem;
    padding-top: 4rem;
    background-color: #c8d6e5;
    color: #143e6d;
    border-radius: 5px;
    position: relative;

    span {
      position: absolute;
      text-transform: uppercase;
      font-weight: bold;
      font-size: 1.35rem;
      top: 0.5rem;
      left: 0;
      width: 100%;
      text-align: center;
      letter-spacing: 0.25rem;
      font-family: sans-serif;
      color: #395e88;
    }
  }
}

.page-imagescan {
  height: 100%;
  overflow: hidden;
  box-sizing: border-box;
  background: rgba(#000, 0.03);
}

.page-review {
  padding: 0 30px 15px;
  color: $fgLink;
  width: 45%;
  margin: 0 5% 0 50%;
}

// Assign categories

.page-uncategorized {
  padding: $gapSize;
  border-radius: 4px;
  margin: $gapSize 0;
  background-clip: padding-box;
  border: 1px solid rgba(#000, 0.06);
  background-color: mix(#FFF, $bodyBg, 50%);
  &_subject:before { color: $bodyFgLight; }
}


// Page notes

.page-notes {
  margin: 0 auto;
  max-width: 800px;
}


// Page Settings

.page-settings {
  .sidecol {
    min-width: 200px;
    big {
      display: block;
      margin: 0.5em 0 0.3em 0;
    }
    time {
      display: block;
      color: $bodyFgFaded;
    }
  }
}

.page-image-preview {
  text-align: center;
  img {
    height: auto;
    max-width: 100%;
  }
}

.page-indent {
  margin-left: 30px;
}

